# distributed_field

./: .gitmodules  AliLog.h  CMakeLists.txt  LinkDef.h  README.md  TVirtualMagField.h  config.json
cmake/: BuildGLSL.cmake
scripts/: extract.cxx
shaders/: CMakeLists.txt  benchmark_xfb_g_const.geom  benchmark_xfb_g_glsl.geom  benchmark_xfb_g_glsl_cache.geom  benchmark_xfb_g_ssbo.geom  benchmark_xfb_g_texture.geom  benchmark_xfb_v_const.vert  benchmark_xfb_v_glsl.vert  benchmark_xfb_v_glsl_cache.vert  benchmark_xfb_v_passthrough.vert  benchmark_xfb_v_ssbo.vert  benchmark_xfb_v_texture.vert  debug_f.frag  debug_v.vert  dummy_f.frag
shaders/mag_field/: field_const.glsl  field_glsl_cache_g.glsl  field_glsl_cache_v.glsl  field_ssbo.glsl  field_texture.glsl  mag_cheb.glsl
src/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  benchmark_onehot_xfb.cpp  benchmark_onehot_xfb_const.cpp  benchmark_onehot_xfb_glsl.cpp  benchmark_onehot_xfb_glsl_cache.cpp  benchmark_onehot_xfb_ssbo.cpp  benchmark_onehot_xfb_tex.cpp  benchmark_onehot_xfb_tex_sparse.cpp  benchmark_track_xfb.cpp  benchmark_track_xfb_const.cpp  benchmark_track_xfb_glsl.cpp  benchmark_track_xfb_glsl_cache.cpp  benchmark_track_xfb_ssbo.cpp  benchmark_track_xfb_tex.cpp  benchmark_track_xfb_tex_sparse.cpp  benchmark_window.cpp  debug_render_texture.cpp  glsl.cpp  sparse.cpp  ssbo.cpp  texture.cpp
src/benchmark/include/: benchmark_base.h  benchmark_onehot_xfb.h  benchmark_onehot_xfb_const.h  benchmark_onehot_xfb_glsl.h  benchmark_onehot_xfb_glsl_cache.h  benchmark_onehot_xfb_ssbo.h  benchmark_onehot_xfb_tex.h  benchmark_onehot_xfb_tex_sparse.h  benchmark_track_xfb.h  benchmark_track_xfb_const.h  benchmark_track_xfb_glsl.h  benchmark_track_xfb_glsl_cache.h  benchmark_track_xfb_ssbo.h  benchmark_track_xfb_tex.h  benchmark_track_xfb_tex_sparse.h  benchmark_window.h  debug_render_texture.h  glsl.h  sparse.h  ssbo.h  texture.h
src/common/: CMakeLists.txt  config.cpp  context_egl.cpp  context_glfw.cpp  shader.cpp
src/common/include/: config.h  context_base.h  context_egl.h  context_glfw.h  glm_helper.h  shader.h
src/mag_field/: CMakeLists.txt  alice_field.cpp  mag_cheb.cpp
src/mag_field/include/: alice_field.h  mag_cheb.h  measurements.h
src/tests/: CMakeLists.txt
src/tests/common/: context_egl_tests.cpp  context_glfw_tests.cpp
src/tests/mag_field/: mag_cheb_tests.cpp
